# pico-tensorflow

./: CMakeLists.txt  README.md  cmake_install.cmake
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
pico-sdk/src/rp2040/hardware_structs/: Makefile  (+1 more)
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
pico-tflmicro/: Makefile  cmake_install.cmake
pico-tflmicro/examples/hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ss_oled/: CMakeLists.txt  cmake_install.cmake
tf_code/: CMakeLists.txt  cmake_install.cmake  constants.h  main.cpp  main_functions.cpp  model.cpp
(+252 files in other folders)
